feature(endpoint) delete gif endpoint [Start #188]
